<resources>
    <string name="app_name">IntroSlider Example</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Connect the charger</string>
    <string name="desc_slide1">It will start automatically when charger is connected</string>
    <string name="title_slide2">Battery status update</string>
    <string name="desc_slide2">It will  keep you updated on battery charging status through notification and home screen widget</string>
    <string name="title_slide3">Alert on 100%</string>
    <string name="desc_slide3">It will alert you when battery reaches 100%</string>
    <string name="snap">Snap</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="latest">Latest</string>
    <string name="previous">Previous</string>
    <string name="delta">Delta</string>
    <string name="wi_fi_data_usage">Wi-Fi Data Usage!</string>
    <string name="default_notification_channel_id">123654789632145458798</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
