<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appeteria.introsliderexample.TrafficMonitorActivity">

    <Button
        android:onClick="takeSnapshot"
        android:text="@string/snap" />

    <!-- Total Data Usages -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Total Data Usage!"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableRow>

        <TextView
            android:layout_column="1"
            android:text="@string/received"
            android:textSize="20sp" />

        <TextView
            android:layout_column="1"
            android:text="@string/sent"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/latest"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latest_rx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latest_tx"
            android:gravity="right"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/previous"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/previous_rx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/previous_tx"
            android:gravity="right"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/delta"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delta_rx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/delta_tx"
            android:gravity="right"
            android:textSize="20sp" />
    </TableRow>




    <!--Mobile Data Information In Bytes -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Mobile Data Usage!"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TableRow>

        <TextView
            android:layout_column="1"
            android:text="@string/received"
            android:textSize="20sp" />

        <TextView
            android:layout_column="1"
            android:text="@string/sent"
            android:textSize="20sp" />
    </TableRow>


    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/latest"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latest_mrx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latest_mtx"
            android:gravity="right"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/previous"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/previous_mrx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/previous_mtx"
            android:gravity="right"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/delta"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delta_mrx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/delta_mtx"
            android:gravity="right"
            android:textSize="20sp" />
    </TableRow>

    <!--Wi-Fi Data Information In Bytes -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wi_fi_data_usage"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableRow>

        <TextView
            android:layout_column="1"
            android:text="@string/received"
            android:textSize="20sp" />

        <TextView
            android:layout_column="1"
            android:text="@string/sent"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/latest"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latest_wrx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latest_wtx"
            android:gravity="right"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/previous"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/previous_wrx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/previous_wtx"
            android:gravity="right"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/delta"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delta_wrx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/delta_wtx"
            android:gravity="right"
            android:textSize="20sp" />
    </TableRow>

</TableLayout>
